--- a/public/css/willbes/style_cop_acad.css
+++ b/public/css/willbes/style_cop_acad.css
@@ -448,8 +448,29 @@
 }
 
 .map_img {
+    position: relative;
     float: left;
 }
+.map_img span {
+    position: absolute;
+    padding:5px;
+    background: #33373a;
+    color:#fff;
+    min-width: 50px;
+    text-align: center;
+    border:1px solid #000;
+    border-radius: 10px;
+    top:51%;
+    left:50%;
+    margin-left: -25px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+    z-index: 1;
+}
+.map_img span.origin {
+    min-width: 80px;
+    margin-left: -40px;
+}
+
 .campus_info {
     position: relative;
     float: right;
