--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -111,6 +111,9 @@
 .Member .tabs.half li {
     width: 50%;
 }
+.Member .tabs.full li {
+    width: 100%;
+}
 .Member .tabs li a {
     background: none;
     color: #959595;
@@ -6541,8 +6544,9 @@ ul li.profList .willbes-Layer-ProfileBox {
     position: relative;
     float: left;
     width: 33.33333333%;
-    height: 64px;
-    line-height: 62px;
+    padding: 20px 0;
+    /*line-height: 62px;*/
+    line-height: 1.3;
     text-align: center;
 }
 .callBox ul li .row-line {
@@ -6564,7 +6568,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     font-weight: 600;
 }
 .callBox ul li .time {
-    font-size: 14px;
+    font-size: 14px;   
 }
 .callBox ul li a.bnr_go {
     margin-left: 10px;
@@ -7102,10 +7106,10 @@ ul li.profList .willbes-Layer-ProfileBox {
 .ActIndex.MyInfo {
     background: #fbfbfb;
     border-bottom: 1px solid #e5e5e5;
-    margin-top: 30px;
+    margin-top:30px;
 }
 .ActIndex.MyInfo .will-Tit {
-    margin-top: -30px;
+    margin-top:-30px;
 }
 .MyLecInfoBox {
     float: left;
