제대군인인증

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -307,6 +307,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+caption {
+  display: none;
+}
 select {
   border: 1px solid #d4d4d4;
 }
