--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3561,7 +3561,7 @@ table.classTable tr td.w-data {
 .LeclistTable .listTable tr th,
 .LeclistTable .listTable tr td {
     text-align: center;
-    line-height: 40px;
+    line-height: 40px !important;
     letter-spacing: 0;
 }
 .LeclistTable .listTable thead tr th {
@@ -3829,7 +3829,7 @@ form .LeclistTable .evtTable tr td a.w-del {
     background: #fff;
     float: left;
     position: relative;
-    width: 570px;
+    width: 540px;
     height: 25px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -5465,7 +5465,7 @@ table.finTable .row-line {
 /* subContainer : Prof : listTable 공통 */
 .willbes-listTable {
     float: left;
-    margin-top: 30px;
+    /*margin-top: 30px;*/
 }
 .will-Tit {
     font-size: 16px;
@@ -5749,7 +5749,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     left: 0;
     width: 576px;
     height: 90px;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 /* subContainer : Prof : willbes-Layer-ProfileBox */
@@ -10332,6 +10332,34 @@ table.acadlecInfoPackageTable tr.Top td {
     float: left;
 }
 
+/* 제대군인인증팝업 */
+.leaveArmyJoin {padding-bottom:30px; overflow-y:scroll; width:740px; height: 700px;}
+.leaveArmyJoin .laj_top h3 {background:#000 url(http://www.willbescop.net/assets/img/common/pop_armytit1.png) no-repeat center center; height:60px; font-size:0}
+.leaveArmyJoin .laj_top h3.survery {background:#26759d url(http://www.willbescop.net/assets/img/common/pop_armytit2.png) no-repeat center center; height:60px; font-size:0}
+.leaveArmyJoin .laj_top div {text-align:center; padding:20px 0; border-bottom:1px dashed #CCCCCC}
+.leaveArmyJoin .laj_top ul {background:#636363; font-size:95%; color:#fff; padding:20px 0 20px 25px}
+.leaveArmyJoin .laj_top li {margin-bottom:10px; margin-left:20px; list-style-type:disc}
+.leaveArmyJoin .laj_top span {color:#ede1c1}
+
+.leaveArmyJoin .laj_tab {background:#b7b7b7; padding:10px 0 10px 25px; margin-bottom:20px; letter-spacing:-1px}
+.leaveArmyJoin .laj_tab strong {margin-right:10px; float:left; height:30px; line-height:30px}
+.leaveArmyJoin .laj_tab a {display:inline-block; float:left; padding:0 8px; height:26px; line-height:26px; border:1px solid #636363; border-radius:5px; font-weight:bold; background:#b7b7b7; color:#636363; margin-right:4px}
+.leaveArmyJoin .laj_tab a.active,
+.leaveArmyJoin .laj_tab a:hover {background:#fff; color:#000}
+.leaveArmyJoin .laj_tab:after {content:""; display:block; clear:both}
+
+.leaveArmyJoin .laj_sec {margin:0 0 30px; border-bottom:1px dashed #d7d7d7; padding:20px 0}
+.leaveArmyJoin .laj_sec h4 {border-left:3px solid #F30; margin-bottom:15px; font-size:18px; font-weight:bold; padding-left:10px; color:#222}
+.leaveArmyJoin .laj_sec td {padding:8px 0}
+.leaveArmyJoin .laj_sec .filetype {margin-bottom: 10px}
+.leaveArmyJoin .laj_sec .filetype .file-text {width: 300px;}
+.leaveArmyJoin .laj_sec li {line-height: 2}
+.leaveArmyJoin .route {line-height:2}
+
+.leaveArmyJoin .laj_btns {text-align:center; margin-top: 30px}
+.leaveArmyJoin .laj_btns a {display:inline-block; margin:0 3px; color:#fff; background:#000 url(http://www.willbescop.net/assets/assets/img/common/arrow_02.png) no-repeat 85% center; font-size:140%; height:36px; line-height:36px; border:1px solid #000; padding:0 30px; font-weight:bold; font-family:'NanumBarunGothic', 'Malgun Gothic', Arial,Sans-serif}
+.leaveArmyJoin .laj_btns a.btnA {background:#707070 url(http://www.willbescop.net/assets/img/common/arrow_02.png) no-repeat 85% center; border:1px solid #707070}
+.leaveArmyJoin .laj_btns a:hover {color:#000; background:#fff; height:36px; line-height:36px; border:1px solid #000}
 
 
 /* Only IE Hack */
