타 학원 수강생 인증 팝업

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -190,7 +190,8 @@ html {
 	border: 0;
   }
   input {
-	line-height: normal;
+  line-height: normal;
+  vertical-align:middle;
   }
   input[type="checkbox"],
   input[type="radio"],
