경찰 기출문제 랜딩페이지(이모티콘 댓글)

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -9761,6 +9761,7 @@ table.acadlecInfoPackageTable tr.Top td {
     display: inline-block;
     margin: 0 7px;
     line-height: 18px;
+    vertical-align: middle;
 }
 .Paging ul li a {
     font-size: 12px;
