--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -326,7 +326,8 @@ button span {
 a, a:hover, a:active, a:link, a:visited {
 	text-decoration: none;
 	color: inherit;
-	vertical-align: baseline;
+  vertical-align: baseline;
+  cursor:pointer;
 }
 strong {
 	font-weight: 700;
