통합회원전환, 고객센터 메인 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3564,6 +3564,9 @@ table.classTable tr td.w-data {
     line-height: 40px !important;
     letter-spacing: 0;
 }
+.LeclistTable .csTable tr td {
+    line-height: 1.4 !important;
+}
 .LeclistTable .listTable thead tr th {
     background: #f9f9f9;
     font-weight: 600;
