--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -626,6 +626,9 @@ select[disabled] {
 .mt100 {
   margin-top: 100px !important;
 }
+.mt110 {
+  margin-top: 110px !important;
+}
 
 .mb-zero {
   margin-bottom: 0 !important;
