--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1341,10 +1341,9 @@ table.auTable tr td {
     font-size: 10px;
 }
 .Section .will-listTit {
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 600;
     color: #464646;
-    line-height: 16px;
     margin-bottom: 25px;
 }
 .Section .will-nlistTit {
@@ -2751,7 +2750,7 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
 .viewBox {
     display: none;
     position: absolute;
-    top: 48px;
+    top: 54px;
     right: 26px;
     z-index: 10;
     background: #fff;
@@ -3553,6 +3552,83 @@ table.classTable tr td.w-data {
     border-left: 1px solid #959595;
     border-right: 1px solid #959595;
 }
+
+/* subContainer : Content : 강의 > 수강신청 안내 : requestInfo */
+
+.willbes-Layer-requestInfo {
+    display: none;
+    background: #fff;
+    position: absolute;
+    top: 29px;
+    right: 0;
+    z-index: 110;
+    width: 700px;
+    height: 610px;
+    border: 1px solid #2f2f2f;
+    padding: 20px 25px 30px;
+}
+.willbes-Layer-requestInfo .closeBtn {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+}
+.willbes-Layer-requestInfo .Layer-Tit {
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0;
+    padding: 20px 0 25px;
+    border-bottom: 2px solid #000;
+}
+.willbes-Layer-requestInfo .Layer-Tit span {
+    vertical-align: baseline;
+}
+.willbes-Layer-requestInfo .Layer-SubTit {
+    font-size: 12px;
+    padding: 20px 0;
+} 
+.willbes-Layer-requestInfo .Layer-SubTit li {
+    list-style: disc;
+    line-height: 1.4;
+    margin-bottom:10px;
+    margin-left:15px;
+}
+.willbes-Layer-requestInfo .Layer-SubTit li:last-child {
+    margin-bottom:0;
+}
+.willbes-Layer-requestInfo table {
+    border-top:1px solid #000;
+}
+.willbes-Layer-requestInfo table tr td {
+    font-size: 12px;
+    font-weight: 300;
+}
+.willbes-Layer-requestInfo table tr td {
+    line-height: 20px !important;
+    padding: 13px 0;
+}
+.willbes-Layer-requestInfo .nBox {
+    display: inline-block;
+    width: 37px;
+    height: 17px;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 19px;
+    margin: 0 1px;
+}
+.willbes-Layer-requestInfo .nBox.n1 {
+    background: #f14078;
+}
+.willbes-Layer-requestInfo .nBox.n2 {
+    background: #21abc8;
+}
+.willbes-Layer-requestInfo .nBox.n3 {
+    background: #1087ef;
+}
+.willbes-Layer-requestInfo .nBox.n4 {
+    background: #333
+}
+
 
 /* subContainer : Content : 강의목차 : LeclistTable */
 .LeclistTable {
