--- a/public/css/willbes/style_gosi.css
+++ b/public/css/willbes/style_gosi.css
@@ -16,27 +16,26 @@
 }
 .VisualBox {
     float: left;
-    width: 740px;
-    height: 268px;
+    width: 714px;
+    height: 300px;
     overflow: hidden;
 }
 .VisualBox .MaintabList {
     position: absolute;
-    bottom: 8px;
+    bottom: 10px;
     left: 0;
     right: 0;
     z-index: 99;
     text-align: center;
 }
 .VisualBox .MaintabList ul li {
-    background: #38434d;
+    background: #282828;
     display: inline-block; 
-    height: 28px;
+    height: 35px;
     font-size: 14px;
     color: #fff;
-    line-height: 26px;
-    border: 1px solid #fff;
-    margin: 0 -2px;
+    line-height: 35px;
+    margin:0 1px;
 }
 .VisualBox .MaintabList.three ul li {
     width: 209px;
@@ -49,13 +48,26 @@
     width: 100%;
     height: 100%;
 }
-
+.VisualBox .MaintabList ul li:last-child {
+    margin:0;
+}
+.VisualBox .MaintabList ul li a.active {
+    background: #c9c9c9;
+    color: #0a0a0a;
+}
 .VisualsubBox {
     float: right;
-    width: 380px;
-    height: 268px;
+    width: 394px;
+    height: 300px;
     overflow: hidden;
 }
+.VisualsubBox .bx-wrapper .bx-controls-auto {
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    margin: 0;
+    z-index: 90;
+  }
 .VisualList {
     float: left;
     width: 100%;
@@ -75,6 +87,126 @@
     border-left: 1px solid #ebebeb;
 }
 
+/* Main Container : Prof */
+.gosi .Section .ProfBox li {
+    float: left;
+    width: 216px;
+    height: 237px;
+    margin-left: 10px;
+}
+.gosi .Section .ProfBox li:first-child {
+    margin-left: 0;
+}
+
+.gosi .Section .ProfBox:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/**/
+.gosi .Section .willbesLec {
+    width:614px;
+}
+.gosi .smallTit {
+    border-top:1px solid #b8b8b8;
+    font-size: 22px;
+    color:#363636;    
+    position: relative;
+}
+.gosi .smallTit p {
+    position: absolute;
+    top:-15px;
+    text-align:left;
+    width: 100%;
+}
+.gosi .smallTit span {
+    font-weight: 600;
+    background: #fff;
+    padding:0 20px 0 0;
+}
+.gosi .smallTit strong {
+    color:#ba560e;
+}
+
+.gosi .will-listTit {
+    margin-bottom: 15px;
+    color:#181818;
+}
+
+.bestLectBx {position: relative;}
+.bestLectBx .prof-subject {
+    background: #ececec;  
+    width: 100%;
+    height: 30px;
+    overflow: hidden;
+}
+.bestLectBx .prof-subject li {
+    display: inline; float: left;
+}
+
+.bestLectBx .bx-wrapper{left:0}
+.prof-subject li{text-align:center;}
+.prof-subject li a{
+    display:block;
+    overflow:hidden;
+    width:75px;
+    height:30px;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    vertical-align:middle;
+    line-height:30px;
+    text-align:center;
+    font-size: 14px;
+}
+.prof-subject li a:hover, 
+.prof-subject li a.active{color:#c7763c;}
+.prof-subjec:after {
+    content:""; display: block; clear:both;
+}
+.bestLectBx .bx-controls-direction a.bx-prev{left:0}
+.bestLectBx .bx-controls-direction a.bx-next{right:0}
+.prof-professors .bx-wrapper{left:0;}
+.prof-professors .bx-viewport{margin:0}
+.prof-professors .bx-controls{display:none}
+.bestLectBx .bx-controls-direction {
+    width: 100%;
+    height: 45px;
+    position: absolute;
+    top: 50%;
+    margin-top: -22px;
+}
+.bestLectBx .bx-controls-direction a {
+    width: 35px;
+    height: 45px;
+}
+.bestLectBx .bx-controls-direction a.disabled {
+    display: block;
+    opacity: 0.5;
+}
+.bestLectBx .bx-prev {
+    background: url("../../img/willbes/gosi/guide/guide_prev.png") no-repeat 0 0;
+    left: -45px;
+    right: inherit;
+}
+.bestLectBx .bx-next {
+    background: url("../../img/willbes/gosi/guide/guide_next.png") no-repeat 0 0;
+    left: inherit;
+    right: -45px;
+}
+
+.prof-professors {clear:both; margin-top:40px;}
+.prof-slider {width:614px; height:120px; overflow:hidden;}
+.prof-slider li {position:relative; display:inline; float:left; height:120px; width:50%}
+.prof-slider li img {position:absolute; width:120px; height:120px}
+.prof-slider li span {position:absolute; left:138px; width:150px}
+.prof-slider li span.txt1 {top:0; color:#3a3a3a; font-size:17px}
+.prof-slider li span.txt2 {top:22px; color:#ba560e; font-size:22px; font-weight:bold;}
+.prof-slider li span.txt3 {top:50px; color:#666; font-size: 14px; line-height: 1.4}
+.prof-slider li > a {position:absolute; left:138px; bottom:0; border:1px solid #c9c9c9; display: inline; padding:3px 5px; color:#898989}
+.prof-slider:after {
+    content:""; display: block; clear:both;
+}
 
 /* Main Container : Gosi */
 .gosi .tx-color {
@@ -88,19 +220,29 @@
     background: url("../../img/willbes/gosi/icon_arrow.gif") no-repeat 0 0;
 }
 .gosi .Section3 {
-    background: #f0f0f0;
-    padding: 40px 0;
+    background: #f8f8f8;
+    padding-bottom:90px;
 }
 .gosi .List-Table li a img,
+.gosi .bSlider .bx-wrapper .bx-pager.bx-default-pager a:hover, 
+.gosi .bSlider .bx-wrapper .bx-pager.bx-default-pager a.active,
+.gosi .bSlider .bx-wrapper .bx-pager.bx-default-pager a:focus,
 .gosi .bSlider.blueSlider .bx-wrapper .bx-pager.bx-default-pager a:hover, 
 .gosi .bSlider.blueSlider .bx-wrapper .bx-pager.bx-default-pager a.active,
 .gosi .bSlider.blueSlider .bx-wrapper .bx-pager.bx-default-pager a:focus {
     background: #ba560e;
 }
-.gosi .Section .SpecialBox dt .infoBox .infoTit,
-.gosi .Section .NoticeBox dt .infoBox .infoTit,
-.gosi .tabWrap.noticeWrap li a.on {
-    color: #ba560e;
+.gosi .Section .SpecialBox li {
+    display: inline; float: left;
+    width: 216px; height: 143px;
+    margin-right:10px; margin-bottom:10px;
+}
+.gosi .Section .SpecialBox li:nth-child(5),
+.gosi .Section .SpecialBox li:last-child {
+    margin-right:0}
+}
+.gosi .Section .SpecialBox ul:after {
+    content:''; display: block; clear:both}
 }
 
 /* Main Container : QuickMenu : Gosi */
