--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3630,6 +3630,28 @@ table.classTable tr td.w-data {
 .willbes-Layer-requestInfo .nBox.n4 {
     background: #333
 }
+.willbes-Layer-requestInfo .acadBox {
+    display: inline-block;
+    font-size: 11px;
+    font-weight: 600;
+    color: #000;
+    text-align: center;
+    line-height: 20px;
+    border: 1px solid #000;
+    padding: 0 4px;
+}
+.willbes-Layer-requestInfo .acadBox.n1 {
+    color: #1345b6;
+    border-color: #1345b6;
+}
+.willbes-Layer-requestInfo .acadBox.n2 {
+    color: #0a8cc2;
+    border-color: #0a8cc2;
+}
+.willbes-Layer-requestInfo .acadBox.n3 {
+    color: #9c3eb4;
+    border-color: #9c3eb4;
+}
 
 
 
