--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2,6 +2,7 @@
 @import url("style_main.css");
 @import url("style_cop.css");
 @import url("style_cop_acad.css");
+@import url("style_cop_adm.css");
 @import url("style_gosi.css");
 @import url("style_gosi_acad.css");
 @import url("style_gpgosi.css");
