경찰승진 온라인 메인

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3,6 +3,7 @@
 @import url("style_cop.css");
 @import url("style_cop_acad.css");
 @import url("style_cop_adm.css");
+@import url("style_cop_pro.css");
 @import url("style_gosi.css");
 @import url("style_gosi_acad.css");
 @import url("style_gpgosi.css");
